added report, notebook and readmefile

--- a/website/pdf.html
+++ b/website/pdf.html
@@ -6,9 +6,9 @@
     <title>Project PDF</title>
 </head>
 <body>
-    <h1>Project Documentation</h1>
-    <p>View the project documentation below:</p>
-    <embed src="ΑΓΓΕΛΙΔΗΣ-comments.pdf" type="application/pdf" width="100%" height="600px">
+    <h1>Project Report</h1>
     <p><a href="index.html">Back to main resources</a></p>
+    <p>View the project report below:</p>
+    <embed src="../Agents_Report.pdf" type="application/pdf" width="100%" height="600px">
 </body>
 </html>
