--- a/website/download_code.html
+++ b/website/download_code.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Download Project Code</h1>
-    <p>Download the complete project code <a href="path/to/your/code.zip" download="YourProjectCode.zip">here</a>.</p>
+    <p>Download the zipped code for the GUI <a href="../code.zip" download="code.zip">here</a>.</p>
+    <p>Download the python notebook for the agent training <a href="../myBestTry.ipynb" download="training_code.ipynb">here</a>.</p>
+
     <p><a href="index.html">Back to main resources</a></p>
 </body>
 </html>
