Trying to clear up the project

--- a/website/index.html
+++ b/website/index.html
@@ -12,5 +12,9 @@
         <li><a href="video.html" target="_blank">Video Demonstration</a></li>
         <li><a href="download_code.html" target="_blank">Download Project Code</a></li>
     </ul>
+    <p>Creator: Angelidis Nikolaos</p> 
+    <p>Email: nangelidis@tuc.gr</p> 
+
+    
 </body>
 </html>
