made website better

--- a/website/index.html
+++ b/website/index.html
@@ -6,13 +6,15 @@
     <title>Project Resources Index</title>
 </head>
 <body>
-    <h1>Project Resources</h1>
+    <h1>Smart Connect 4: Developing an Intelligent Game-Playing Agent through Reinforcement Learning</h1>
+    <h2>Project Resources</h2>
     <ul>
-        <li><a href="pdf.html" target="_blank">Project Documentation (PDF)</a></li>
-        <li><a href="video.html" target="_blank">Video Demonstration</a></li>
-        <li><a href="download_code.html" target="_blank">Download Project Code</a></li>
+        <li><a href="pdf.html">Project Documentation (PDF)</a></li>
+        <li><a href="video.html">Video Demonstration</a></li>
+        <li><a href="download_code.html">Download Project Code</a></li>
     </ul>
     <p>Creator: Angelidis Nikolaos</p> 
+    <p>AM: 2019030190</p> 
     <p>Email: nangelidis@tuc.gr</p> 
 
     
