--- a/website/video.html
+++ b/website/video.html
@@ -6,11 +6,11 @@
     <title>Project Video</title>
 </head>
 <body>
-    <h1>Video Demonstration of the Project</h1>
+    <h1>Video Demonstration of the Graphical User Inteface</h1>
+    <p><a href="index.html">Back to main resources</a></p>
     <video width="640" height="480" controls>
         <source src="Guide/AI Plays Connect 4 Adding DOUBLE DEEP Q-NETWORK and EXPERIENCE REPLAY to Reinforcement Learning Bot.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
-    <p><a href="index.html">Back to main resources</a></p>
 </body>
 </html>
