added gameplay vid and made html file correct

--- a/website/video.html
+++ b/website/video.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Video Demonstration of the Graphical User Inteface</h1>
     <p><a href="index.html">Back to main resources</a></p>
-    <video width="640" height="480" controls>
-        <source src="Guide/AI Plays Connect 4 Adding DOUBLE DEEP Q-NETWORK and EXPERIENCE REPLAY to Reinforcement Learning Bot.mp4" type="video/mp4">
+    <video width="800" height="600" controls>
+        <source src="../gui_gameplay.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </body>
