--- a/website/download_code.html
+++ b/website/download_code.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Download Project Code</h1>
     <p>Download the code for the whole project <a href="../code.zip" download="Connect4Agent.zip">here</a>.</p>
-    <p>Download the python notebook for the agent training <a href="../myBestTry.ipynb" download="training_code.ipynb">here</a>.</p>
+    <p>Download the python notebook for the agent training <a href="../training_code.ipynb" download="training_code.ipynb">here</a>.</p>
 
     <p><a href="index.html">Back to main resources</a></p>
 </body>
